[gd_scene load_steps=2 format=3 uid="uid://bg4a5flvnhv1c"]

[ext_resource type="Script" path="res://tscns/generic_hit-hurt_box/hitbox.gd" id="1_n2nno"]

[node name="Hitbox" type="Area3D"]
collision_layer = 32
collision_mask = 0
script = ExtResource("1_n2nno")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]

[node name="Timer" type="Timer" parent="."]

[connection signal="graceperiod_ended" from="." to="." method="_on_graceperiod_ended"]
[connection signal="graceperiod_started" from="." to="." method="_on_graceperiod_started"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
